--- a/db.yaml
+++ b/db.yaml
@@ -24,12 +24,12 @@
       - PyMySQL
       - cryptography
       executable: pip3.9 #pip3.11 if python version is 3.11
-      
+
   - name: check DB connection
     community.mysql.mysql_info:
       login_user: root
       login_password: "{{ mysql_root_password }}"    
-      login_hosts: "{{ login_host }}"         
+      login_host: "{{ login_host }}"         
       filter: version
     ignore_error: yes
     register: mysql_connection_output
