--- a/db.yaml
+++ b/db.yaml
@@ -31,7 +31,7 @@
       login_password: "{{ mysql_root_password }}"    
       login_host: "{{ login_host }}"         
       filter: version
-    ignore_error: yes
+    ignore_errors: yes
     register: mysql_connection_output
   - name: print output
     ansible.builtin.debug:
