--- a/backend.yaml
+++ b/backend.yaml
@@ -58,7 +58,7 @@
       executable: pip3.9     
 
   - name: import data into mysql
-    communite.mysql.mysql_db: 
+    community.mysql.mysql_db: 
       login_user: root
       login_password: "{{ login_password }}"  
       login_host: "{{ login_host }}"    
