--- a/expens.conf
+++ b/expens.conf
@@ -1,6 +1,6 @@
 proxy_http_version 1.1;
 
-location /api/ { proxy_pass http://backend.crn.online:8080/; }
+location /api/ { proxy_pass http://backend.crn503.online:8080/; }
 
 location /health {
   stub_status on;
